// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`within userGroupsSelectors the selectors match their snapshots for the includedSourceUserGroupsSelector 1`] = `
Array [
  Object {
    "entryCount": 0,
    "id": "5002",
    "isIncluded": true,
    "linkedId": null,
    "memberOf": "userGroups",
    "name": "Test Group B",
    "userIds": Array [],
    "workspaceId": "1001",
  },
]
`;

exports[`within userGroupsSelectors the selectors match their snapshots for the sourceUserGroupsForTransferSelector 1`] = `
Array [
  Object {
    "entryCount": 0,
    "id": "5002",
    "isIncluded": true,
    "linkedId": null,
    "memberOf": "userGroups",
    "name": "Test Group B",
    "userIds": Array [],
    "workspaceId": "1001",
  },
]
`;

exports[`within userGroupsSelectors the selectors match their snapshots for the sourceUserGroupsInActiveWorkspaceSelector 1`] = `
Array [
  Object {
    "entryCount": 0,
    "id": "5001",
    "isIncluded": false,
    "linkedId": "clock-user-group-02",
    "memberOf": "userGroups",
    "name": "Test Group A",
    "userIds": Array [],
    "workspaceId": "1001",
  },
  Object {
    "entryCount": 0,
    "id": "5002",
    "isIncluded": true,
    "linkedId": null,
    "memberOf": "userGroups",
    "name": "Test Group B",
    "userIds": Array [],
    "workspaceId": "1001",
  },
]
`;
